<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor"
    tools:context="org.studia.barterapplication.activities.ChangePassword">

    <ImageView
        android:id="@+id/changePasswordProfileTextView"
        android:layout_width="3300dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile_png"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/oldPasswordEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="10dp"
        android:hint="@string/enter_your_old_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordProfileTextView" />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:hint="@string/enter_your_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPasswordEditText" />

    <EditText
        android:id="@+id/newPasswordAgainEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:hint="@string/enter_your_new_password_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordEditText" />

    <Button
        android:id="@+id/passwordConfirmBtn"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_marginTop="125dp"

        android:background="@color/blue_button"
        android:hint="@string/confirm"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordAgainEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>